--- a/.prettierrc
+++ b/.prettierrc
@@ -5,7 +5,7 @@
   "singleQuote": true,
   "useTabs": true,
   "tabWidth": 2,
-  "trailingComma": "all",
+  "trailingComma": "es5",
   "parser": "babel",
   "bracketSpacing": true
 }
