feat: base reducers/actions for store redux

--- a/tsconfig.path.json
+++ b/tsconfig.path.json
@@ -6,6 +6,7 @@
       "@assets/*": ["src/assets/*"],
       "@components/*": ["src/components/*"],
       "@constants/*": ["src/constants/*"],
+      "@redux/*": ["src/redux/*"],
       "@screens/*": ["src/screens/*"],
       "@styles/*": ["src/styles/*"],
       "@utils/*": ["src/utils/*"],
