--- a/package.json
+++ b/package.json
@@ -5,15 +5,14 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^6.4.5",
+    "@cypress/code-coverage": "^3.10.0",
+    "@cypress/instrument-cra": "^1.4.0",
     "@reduxjs/toolkit": "^1.8.3",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^13.0.0",
-    "@testing-library/user-event": "^13.2.1",
-    "@types/jest": "^27.0.1",
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/redux-logger": "^3.0.9",
+    "cypress": "^10.3.0",
     "gh-pages": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -30,15 +29,19 @@
   "scripts": {
     "start": "craco start",
     "build": "craco build",
-    "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "cypress:start:app": "BROWSER=none react-scripts - r @cypress/instrument-cra start",
+    "cypress:start:wait": "start-server-and-test cypress:start:app http://localhost:3000",
+    "cypress:open": "npm run cypress:start:wait -- \"cypress open\"",
+    "cypress:run": "npm run cypress:start:wait -- \"cypress run\"",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
       "react-app",
-      "react-app/jest"
+      "react-app/jest",
+      "plugin:cypress/recommended"
     ]
   },
   "browserslist": {
@@ -72,7 +75,7 @@
     "husky": "^8.0.1",
     "lint-staged": "^12.4.1",
     "prettier": "2.7.1",
-    "start-server-and-test": "^1.10.6",
+    "start-server-and-test": "^1.14.0",
     "terser-webpack-plugin": "^2.1.3"
   },
   "resolutions": {
