--- a/.eslintrc
+++ b/.eslintrc
@@ -48,7 +48,26 @@
       }
     ],
     "react/prop-types": "off",
-    "react/jsx-fragments": [1, "element"]
+    "react/jsx-fragments": [1, "element"],
+    "import/order": [
+      "error",
+      {
+        "groups": ["builtin", "external", "internal"],
+        "pathGroups": [
+          {
+            "pattern": "react",
+            "group": "external",
+            "position": "before"
+          }
+        ],
+        "pathGroupsExcludedImportTypes": ["react"],
+        "newlines-between": "always",
+        "alphabetize": {
+          "order": "asc",
+          "caseInsensitive": true
+        }
+      }
+    ]
   },
   "overrides": [
     {
