--- a/.prettierrc
+++ b/.prettierrc
@@ -1,11 +1,11 @@
 {
-  "jsxBracketSameLine": true,
   "semi": false,
-  "printWidth": 120,
-  "singleQuote": true,
-  "useTabs": true,
   "tabWidth": 2,
+  "printWidth": 120,
   "trailingComma": "es5",
-  "parser": "babel",
-  "bracketSpacing": true
+  "useTabs": false,
+  "singleQuote": true,
+  "bracketSpacing": true,
+  "arrowParens": "always",
+  "endOfLine": "auto"
 }
