--- a/tsconfig.path.json
+++ b/tsconfig.path.json
@@ -11,7 +11,7 @@
       "@screens/*": ["src/screens/*"],
       "@styles/*": ["src/styles/*"],
       "@utils/*": ["src/utils/*"],
-      "@interfaces/*": ["src/interfaces/*"],
-    },
+      "@interfaces/*": ["src/interfaces/*"]
+    }
   }
 }
